--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = deuce-client
-version = 0.1-beta9
+version = 0.1
 summary = Client for Deuce De-Duplication-As-A-Service
 description-file = README.rst
 author = Rackspace
@@ -8,7 +8,7 @@ author-e-mail=
 license = Apache-2
 home-page = http://github.com/rackerlabs/deuce-client 
 classifier = 
-    Development Status :: 3 - Alpha
+    Development Status :: 5 - Production/Stable
         Environment :: Console
         Environment :: OpenStack
         Intended Audience :: Developers 
